
161005 Martin Mann :
 * Predictor :
   + getMaxInteractionWidth() : upper width bound for an interacting site
 * PredictorMaxProb :
 * PredictorMfeRNAup :
   * matrix initialization of end regions reduced to the accessible window
     widths using getMaxInteractionWidth()
   * adaption of recursion to varying matrix sizes

161005 Martin Mann :
 * Accessibility* :
   - AccessibilityConstraintAlphabet : now part of AccessibilityConstraint
   * ED_UPPER_BOUND = E_INF
   * uses now AccessibilityConstraint object instead of dot-bracket string
 + AccessibilityConstraint : encodes an accessibility constraint based
   + init via dot-bracket VRNA-like encoding
   + getVrnaDotBracket() : get according VRNA-styled dot-bracket encoding
   + isAccessible() : check for explicit "accessible" marking
   + isBlocked() : check for explicit "blocked" marking
   + isEmpty() : check if any constraint information present
 * CommandLineParsing :
   * getTargetAccessibility() : creation of AccessibilityConstraint object
   * getQueryAccessibility() : creation of AccessibilityConstraint object
 + IndexRange : represents an ascending or descending range of (sequence) indices
   + isAscending() : check if ascending range encoding
   + isDescending() : check if descending range encoding
   + ostream operator
   + less-than operator
 * Interaction :
   + construction from InteractionRange
   * sequence handling via pointers to enable assignment operator
   * basePairs : public
   - getBasePairs() : obsolete for public member
   * energy : public
   - get/setEnergy() : obsolete for public member
   + isEmpty() : check if any base pairs present
   + assignment operator (InteractionRange)
 * InteractionEnergy* :
   + getBestStackingEnergy() : access to the best stacking energy contribution
   + getBestInitEnergy() : access to the best initiation energy contribution
   + getBestDangleEnergy() : access to the best dangling end energy contribution